// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feedback/> should render 1`] = `
<div>
  <div
    class="sc-6e8ce629-0 KibPI sc-3f9d0357-0 fZXZfe"
  >
    <div
      class="sc-c707bea3-0 fLyNGe"
    >
      <div
        class="sc-13323d30-0 gtmVnh"
      >
        <div
          class="sc-66a51d8b-3 iitVHg"
        >
          <h2
            class="sc-66a51d8b-4 ihsodu sc-a53a0f9a-0 hXUEeL"
          >
            <span
              class="sc-f4f767e-0 cxMIVi"
            />
            Avez-vous trouvé la réponse à votre question ?
          </h2>
          <p
            class="sc-66a51d8b-5 eRJUhM"
          >
            <button
              class="sc-b0ebfae6-0 ffxSnV sc-66a51d8b-6 xfnpJ"
            >
              Non
            </button>
            <button
              class="sc-b0ebfae6-0 ffxSnV sc-66a51d8b-6 xfnpJ"
            >
              Oui
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer no 1`] = `
<div>
  <div
    class="sc-6e8ce629-0 KibPI sc-3f9d0357-0 fZXZfe"
  >
    <div
      class="sc-c707bea3-0 fLyNGe"
    >
      <div
        class="sc-13323d30-0 gtmVnh"
      >
        <div
          class="sc-66a51d8b-3 iitVHg"
        >
          <h2
            class="sc-66a51d8b-4 ihsodu sc-a53a0f9a-0 hXUEeL"
          >
            <span
              class="sc-f4f767e-0 cxMIVi"
            />
            Merci pour votre réponse.
          </h2>
        </div>
        <form>
          <fieldset
            class="sc-66a51d8b-1 dklOQM"
          >
            <legend
              class="sc-66a51d8b-2 jpcSlV"
            >
              Pouvez-vous nous en dire plus ?
            </legend>
            <label
              class="sc-2aed4ca4-0 hCUNwT"
              for="unclear"
            >
              <input
                class="sc-2aed4ca4-1 xIQyG"
                id="unclear"
                name="category"
                type="checkbox"
                value="unclear"
              />
              Les informations ne sont pas claires.
            </label>
            <label
              class="sc-2aed4ca4-0 hCUNwT"
              for="unrelated"
            >
              <input
                class="sc-2aed4ca4-1 xIQyG"
                id="unrelated"
                name="category"
                type="checkbox"
                value="unrelated"
              />
              Cette page ne correspond pas à ma recherche ou à ma situation.
            </label>
            <label
              class="sc-2aed4ca4-0 hCUNwT"
              for="unsatisfied"
            >
              <input
                class="sc-2aed4ca4-1 xIQyG"
                id="unsatisfied"
                name="category"
                type="checkbox"
                value="unsatisfied"
              />
              Je ne suis pas satisfait de cette réglementation.
            </label>
            <label
              class="sc-2aed4ca4-0 hCUNwT"
              for="wrong"
            >
              <input
                class="sc-2aed4ca4-1 xIQyG"
                id="wrong"
                name="category"
                type="checkbox"
                value="wrong"
              />
              Les informations me semblent fausses.
            </label>
          </fieldset>
          <label
            class="sc-66a51d8b-9 jiFyYA"
            for="suggestion"
          >
            Faire une suggestion pour améliorer cette page
          </label>
          <textarea
            class="sc-aa60ea15-0 gXalE sc-66a51d8b-8 hgLwfg"
            cols="50"
            id="suggestion"
            maxlength="150"
            name="suggestion"
            placeholder="Une idée, une suggestion..."
            rows="3"
          />
          <div>
            <span
              class="sc-a4406a0f-0 eiudNM"
            >
              150
               caractères restants
            </span>
            <div
              class="sc-f92038f6-0 llOtbb"
              role="status"
            >
              150
               caractères restants
            </div>
          </div>
          <div
            class="sc-66a51d8b-10 iVMFlu"
          >
            <button
              class="sc-b0ebfae6-0 kxyWXU sc-66a51d8b-6 xfnpJ"
            >
              Envoyer
            </button>
          </div>
        </form>
        <p>
          Pour obtenir une réponse à votre question de droit du travail, nous vous invitons à joindre
           
          <button
            class="sc-b0ebfae6-0 jcMFcJ"
            type="button"
          >
            les services du ministère du Travail en région
            <svg
              aria-hidden="true"
              fill="none"
              viewBox="0 0 28 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
                fill="currentColor"
              />
            </svg>
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer yes 1`] = `
<div>
  <div
    class="sc-6e8ce629-0 KibPI sc-3f9d0357-0 fZXZfe"
  >
    <div
      class="sc-c707bea3-0 fLyNGe"
    >
      <div
        class="sc-13323d30-0 gtmVnh"
      >
        <div
          class="sc-66a51d8b-3 iitVHg"
        >
          <h2
            class="sc-66a51d8b-4 ihsodu sc-a53a0f9a-0 hXUEeL"
          >
            <span
              class="sc-f4f767e-0 cxMIVi"
            />
            Merci pour votre réponse.
          </h2>
        </div>
        <form>
          <label
            class="sc-66a51d8b-9 jiFyYA"
            for="suggestion"
          >
            Faire une suggestion pour améliorer cette page
          </label>
          <textarea
            class="sc-aa60ea15-0 gXalE sc-66a51d8b-8 hgLwfg"
            cols="50"
            id="suggestion"
            maxlength="150"
            name="suggestion"
            placeholder="Une idée, une suggestion..."
            rows="3"
          />
          <div>
            <span
              class="sc-a4406a0f-0 eiudNM"
            >
              150
               caractères restants
            </span>
            <div
              class="sc-f92038f6-0 llOtbb"
              role="status"
            >
              150
               caractères restants
            </div>
          </div>
          <div
            class="sc-66a51d8b-10 iVMFlu"
          >
            <button
              class="sc-b0ebfae6-0 kxyWXU sc-66a51d8b-6 xfnpJ"
            >
              Envoyer
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should send matomo event when click no 1`] = `"[]"`;

exports[`<Feedback/> should send matomo event when click yes 1`] = `"[]"`;
